--- a/landing page/index.html
+++ b/landing page/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <!-- CTA Link (Now points to localhost:5173/dashboard) -->
-                <a href="https://auror-ai.vercel.app/dashboard" class="hidden md:block px-4 py-2 text-sm font-semibold text-gray-900 rounded-lg solana-gradient-btn shadow-lg">
+                <a href="https://auror-ai-app.vercel.app" class="hidden md:block px-4 py-2 text-sm font-semibold text-gray-900 rounded-lg solana-gradient-btn shadow-lg">
                     Start Analysis Now
                 </a>
                 <!-- Mobile Menu Button (Hidden on Desktop) -->
