--- a/landing page/index.html
+++ b/landing page/index.html
@@ -64,7 +64,6 @@
                         <a href="#features" class="text-gray-300 hover:solana-text transition duration-150">Features</a>
                     </div>
                 </div>
-                <!-- CTA Link (Now points to localhost:5173/dashboard) -->
                 <a href="https://auror-ai-app.vercel.app" class="hidden md:block px-4 py-2 text-sm font-semibold text-gray-900 rounded-lg solana-gradient-btn shadow-lg">
                     Start Analysis Now
                 </a>
@@ -91,8 +90,7 @@
                 <p class="text-lg text-gray-400 mb-10 max-w-2xl mx-auto">
                     Stop guessing. We use real-time market data, historical volatility, and up-to-date APYs to give you an objective view of your Solana staking strategy.
                 </p>
-                <!-- Hero CTA Link (Now points to localhost:5173/dashboard) -->
-                <a href="https://auror-ai.vercel.app/dashboard" class="inline-block solana-gradient-btn text-gray-900 font-bold py-3 px-8 rounded-xl text-lg shadow-2xl shadow-[#9945FF]/50 transition duration-300 transform hover:scale-[1.03]">
+                <a href="https://auror-ai-app.vercel.app" class="inline-block solana-gradient-btn text-gray-900 font-bold py-3 px-8 rounded-xl text-lg shadow-2xl shadow-[#9945FF]/50 transition duration-300 transform hover:scale-[1.03]">
                     Get Started Free
                 </a>
                 <p class="mt-4 text-sm text-gray-500">
